force-app/main/Messaging/objects/MessageEvent__e/MessageEvent__e.object-meta.xml
<CustomObject>
    <label>Message Event</label>
    <pluralLabel>Message Events</pluralLabel>
    <description>Platform event for real-time message notifications</description>
</CustomObject> 