force-app/main/Messaging/objects/MessageEvent__e/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Channel or group chat name</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 