force-app/main/Messaging/objects/MessageEvent__e/fields/RecipientId__c.field-meta.xml
<CustomField>
    <fullName>RecipientId__c</fullName>
    <description>Id of the user who received the message</description>
    <label>Recipient Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField> 