force-app/main/Messaging/objects/MessageEvent__e/fields/SenderId__c.field-meta.xml
<CustomField>
    <fullName>SenderId__c</fullName>
    <description>Id of the user who sent the message</description>
    <label>Sender Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 