force-app/main/Messaging/objects/MessageEvent__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the message was sent</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 